--- a/game/parking-fury-3.html
+++ b/game/parking-fury-3.html
@@ -97,34 +97,45 @@
 
                 <div class="game-description">
                     <div class="description-container">
-                        <div class="game-info">
-                            <h2>VEX X3M</h2>
+                        <section class="game-info">
+                            <h2>Parking Fury 3</h2>
                             <div class="rating">
-                                <span class="stars">★★★★★</span>
-                                <span class="votes">26 votes</span>
+                                <span class="stars">★★★★☆</span>
+                                <span class="votes">45 votes</span>
                             </div>
-                            <p>Stick figures are often perplexed by all the scenarios they find themselves in, and the Vex team is no different when being in Vex X3M. It seems that this group of stick figures wants to be the most extreme, and the way they're going about it is to get themselves some motorcycles and drive them along the most twisted paths.</p>
-                        </div>
-
-                        <div class="about-section">
-                            <h2>About Vex X3M</h2>
-                            <p>The thing about motorcycle games is that they're enjoyable as both skill challenges and just sending motorcycles crashing all over the place. This game may have you trying to avoid crashing, but it's no big deal if it happens. The stick figures are prepared to crash everywhere and won't let some wild tracks dissuade them.</p>
-                        </div>
-
-                        <div class="how-to-play">
+                            <p>
+                                Get ready for the ultimate parking challenge in Parking Fury 3! Navigate through dark streets 
+                                and tricky environments as you park various vehicles with precision. Test your driving skills 
+                                and see if you can handle the night!
+                            </p>
+                        </section>
+                    
+                        <section class="about-section">
+                            <h2>About Parking Fury 3</h2>
+                            <p>
+                                Parking Fury 3 takes parking games to a whole new level with night driving and tougher challenges. 
+                                Maneuver through narrow lanes, avoid obstacles, and park your vehicle flawlessly to complete each level. 
+                                With its immersive environment and engaging gameplay, this game is perfect for fans of realistic parking simulations.
+                            </p>
+                        </section>
+                    
+                        <section class="how-to-play">
                             <h2>How to Play</h2>
-                            <p>Vex X3M is a 2D arcade game about a stick figure riding a motorcycle along tracks using the keyboard.</p>
+                            <p>
+                                Use your driving skills to park your vehicle in the assigned spaces without hitting other cars 
+                                or objects. Stay alert, especially during nighttime levels where visibility is limited!
+                            </p>
                             <div class="controls">
                                 <h3>Controls</h3>
                                 <ul>
-                                    <li>W/Up Arrow - Accelerate</li>
-                                    <li>S/Down Arrow - Decelerate/Reverse</li>
-                                    <li>A/Left Arrow - Tilt Left</li>
-                                    <li>D/Right Arrow - Tilt Right</li>
+                                    <li><strong>W/Up Arrow:</strong> Move Forward</li>
+                                    <li><strong>S/Down Arrow:</strong> Move Backward</li>
+                                    <li><strong>A/Left Arrow:</strong> Steer Left</li>
+                                    <li><strong>D/Right Arrow:</strong> Steer Right</li>
                                 </ul>
                             </div>
-                        </div>
-                    </div>
+                        </section>
+                    </div>                    
                 </div>
             </div>
         </div>
