--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index, follow">
-    <meta name="description" content="......">
+    <meta name="description" content="Parking Fury 3 is an online parking simulation game that challenges players to park various vehicles in tight spaces. The game is known for its realistic driving mechanics and the difficulty of maneuvering cars into specific parking spots within a limited time frame. It typically features different levels with increasingly complex and crowded parking areas, such as shopping malls, city streets, and more.">
     <meta name="content-language" content="en">
     <link rel="preload" href="/css/style.css/min.css" as="style">
     <link rel="stylesheet" href="/css/style.css/min.css">
@@ -149,29 +149,21 @@
                         <img src="/img/mr-racer-car-racing.jpg" alt="mr-racer-car-racing" class="game-image">
                         <div class="game-title">Mr Racer Car Racing</div>
                     </a>
-                    <a href="/game/offroad-island.html" class="game-card featured-game">
-                        <img src="/img/offroad-island.jpg" alt="offroad-island" class="game-image">
-                        <div class="game-title">Offroad Island</div>
+                    <a href="/game/stunt-bike-rider-bros.html" class="game-card featured-game">
+                        <img src="/img/stunt-bike-rider-bros.jpg" alt="Stunt Bike Rider Bros" class="game-image">
+                        <div class="game-title">Stunt Bike Rider Bros</div>
                     </a>
                     <a href="/game/offroad-moto-mania.html" class="game-card">
                         <img src="/img/offroad-moto-mania.jpg" alt="offroad-moto-mania" class="game-image">
                         <div class="game-title">Offroad Moto Mania</div>
                     </a>
-                    <a href="/game/racing-car-driving-car-games.html" class="game-card featured-game">
-                        <img src="/img/racing-car-driving-car-games.jpeg" alt="racing-car-driving-car-games" class="game-image">
-                        <div class="game-title">Racing Car Driving Car Games</div>
+                    <a href="/game/vex-x3m.html" class="game-card featured-game">
+                        <img src="/img/vex-x3m.jpg" alt="Vex X3m" class="game-image">
+                        <div class="game-title">Vex X3m</div>
                     </a>
                     <a href="/game/super-hero-driving-school.html" class="game-card">
                         <img src="/img/super-hero-driving-school.jpg" alt="super-hero-driving-school" class="game-image">
                         <div class="game-title">Super Hero Driving School</div>
-                    </a>
-                    <a href="/game/sprunki-challenge.html" class="game-card">
-                        <img src="/img/sprunki-challenge.jpg" alt="Sprunki Challenge" class="game-image">
-                        <div class="game-title">Sprunki Challenge</div>
-                    </a>
-                    <a href="/game/stunt-bike-rider-bros.html" class="game-card">
-                        <img src="/img/stunt-bike-rider-bros.jpg" alt="Stunt Bike Rider Bros" class="game-image">
-                        <div class="game-title">Stunt Bike Rider Bros</div>
                     </a>
                     <a href="/game/trial-xtreme.html" class="game-card">
                         <img src="/img/trial-xtreme.jpg" alt="Trial Xtreme" class="game-image">
@@ -185,11 +177,6 @@
                         <img src="/img/turbo-race-3d.jpg" alt="Turbo Race 3d" class="game-image">
                         <div class="game-title">Turbo Race 3d</div>
                     </a>
-                    <a href="/game/vex-x3m.html" class="game-card">
-                        <img src="/img/vex-x3m.jpg" alt="Vex X3m" class="game-image">
-                        <div class="game-title">Vex X3m</div>
-                    </a>
-
                 </div>
             </div>
         </div>
